# rust-coffeeshop

./: .env  Cargo.toml
migrations/: 20221225173226_counterdb_up.sql  20221225204601_baristadb.sql  20221225204745_kitchendb.sql  20221226093537_productdb.sql
src/: main.rs
src/actors/: db.rs
src/actors/fixtures/: get_all_products.sql  get_products_by_names.sql
src/actors/product/: db.rs  mod.rs
