[package]
name = "rust-coffeeshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "decimal",
  "chrono",
  "uuid",
  "macros",
] }
tokio = { version = "1.23.0", features = ["full"] }
